# Timer

./: .gitignore  CMakeLists.txt
include/: timer.h
src/: main.cpp  timer.cpp
